@@ -6,6 +6,7 @@ to this plugin in that release of Dist-Zilla-Plugins-CJM.
 
 
 5.000  NOT
+	- don't "use Moose::Autobox" (Dist::Zilla doesn't use it anymore)
 	- drop support for Dist::Zilla 4.
 	  (Tests were failing, and Dist::Zilla 5 is 2 years old now.)
 
